--- a/views/product_view.xml
+++ b/views/product_view.xml
@@ -1,22 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
+
     <!-- Inherit the product.product form view -->
     <record id="view_product_product_form_shopify_inherit" model="ir.ui.view">
         <field name="name">product.product.form.inherit.shopify</field>
         <field name="model">product.product</field>
         <field name="inherit_id" ref="product.product_normal_form_view"/>
         <field name="arch" type="xml">
-            <!-- Add Shopify mappings after the 'group_general' group -->
+            <!-- Add Shopify mappings in the right column, after group_general -->
             <xpath expr="//group[@name='group_general']" position="after">
-                <group name="shopify_details" string="Shopify Details">
-                    <group name="shopify_variant_mappings" string="Shopify Variant Mappings">
+                <group name="shopify_group" colspan="2" col="2">
+                    <group name="shopify_details" string="Shopify Details">
                         <field name="shopify_variant_map_ids">
-                            <!-- Inline editable tree view -->
                             <tree editable="bottom">
                                 <field name="web_variant_id" string="Shopify Variant ID"/>
                                 <field name="shopify_instance_id" string="Shopify Instance"/>
                             </tree>
-                            <!-- Form view for detailed editing -->
                             <form string="Shopify Variant Map">
                                 <group>
                                     <field name="web_variant_id" string="Shopify Variant ID"/>
@@ -28,9 +27,9 @@
                 </group>
             </xpath>
             <!-- Fallback: Add at the end of the form if group_general is not found -->
-            <xpath expr="//form" position="inside">
-                <group name="shopify_details_fallback" string="Shopify Details">
-                    <group name="shopify_variant_mappings_fallback" string="Shopify Variant Mappings">
+            <xpath expr="//form/sheet" position="inside">
+                <group name="shopify_group_fallback" colspan="2" col="2">
+                    <group name="shopify_details_fallback" string="Shopify Details">
                         <field name="shopify_variant_map_ids">
                             <tree editable="bottom">
                                 <field name="web_variant_id" string="Shopify Variant ID"/>
