--- a/views/product_view.xml
+++ b/views/product_view.xml
@@ -47,17 +47,18 @@
             </xpath>
         </field>
     </record>
-	
+
     <record id="view_product_template_only_form_wholesale_price" model="ir.ui.view">
         <field name="name">product.template.product.only.form.wholesale.price</field>
         <field name="model">product.template</field>
         <field name="inherit_id" ref="product.product_template_only_form_view"/>
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='list_price']" position="after">
+            <xpath expr="//group[@name='group_standard']" position="inside">
                 <field name="wholesale_price"/>
             </xpath>
         </field>
     </record>
+
 
 
 	
