--- a/views/product_view.xml
+++ b/views/product_view.xml
@@ -51,13 +51,14 @@
     <record id="view_product_template_only_form_wholesale_price" model="ir.ui.view">
         <field name="name">product.template.product.only.form.wholesale.price</field>
         <field name="model">product.template</field>
-        <field name="inherit_id" ref="product.product_template_only_form_view"/>
+        <field name="inherit_id" ref="product.product_template_form_view"/>
         <field name="arch" type="xml">
-            <xpath expr="//group[@name='group_standard']" position="inside">
+            <xpath expr="//group[@name='group_standard_price']" position="inside">
                 <field name="wholesale_price"/>
             </xpath>
         </field>
     </record>
+
 
 
 
