--- a/views/res_partner_view.xml
+++ b/views/res_partner_view.xml
@@ -61,7 +61,7 @@
         <field name="res_model">res.partner</field>
         <field name="domain">[('shopify_partner_map_ids','!=',False)]</field>
         <field name="view_mode">form,tree</field>
-        <field name="context">{'search_default_shopify_customers': 1}</field>
+        <field name="context">{}</field>
         <field name="view_id" ref="view_shopify_customer_tree"/>
         <field name="help" type="html">
             <div class="oe_empty_shopify_customers">
