--- a/views/res_partner_view.xml
+++ b/views/res_partner_view.xml
@@ -59,7 +59,7 @@
         <field name="name">Customers</field>
         <field name="type">ir.actions.act_window</field>
         <field name="res_model">res.partner</field>
-        <field name="domain">[('shopify_partner_map_ids','!=',False)]</field>
+        <field name="domain">[('customer_rank','>',0)]</field>
         <field name="view_mode">form,tree</field>
         <field name="context">{}</field>
         <field name="view_id" ref="view_shopify_customer_tree"/>
