--- a/views/res_partner_view.xml
+++ b/views/res_partner_view.xml
@@ -59,9 +59,9 @@
         <field name="name">Customers</field>
         <field name="type">ir.actions.act_window</field>
         <field name="res_model">res.partner</field>
-        <field name="domain">[('customer_rank','>',0)]</field>
+        <field name="domain">[('shopify_partner_map_ids','!=',False)]</field>
         <field name="view_mode">form,tree</field>
-        <field name="context">{}</field>
+        <field name="context">{'search_default_shopify_customers': 1}</field>
         <field name="view_id" ref="view_shopify_customer_tree"/>
         <field name="help" type="html">
             <div class="oe_empty_shopify_customers">
