Unify partner creation logic

--- a/views/res_partner_view.xml
+++ b/views/res_partner_view.xml
@@ -34,6 +34,7 @@
                                     </group>
                                 </form>
                             </field>
+                            <field name="nif_approved"/>
                         </group>
                     </group>
                 </page>
